# node_line

./: 0_node.py  1_advanced.py  1_reg.py  1_reg_old.py  2_both.py  2_old.py  README.md  e0.py  main.py  pyproject.toml
code/: mlp.py  plotting.py  vector_fields.py
node_line/: plotting.py  vector_fields.py
old/: 1_reg.py
