[project]
name = "node_vector_field_regularization"
version = "0.1.0"
description = "TODO: description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.0",
    "jax[cuda12]>=0.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "optax>=0.2.4",
    "seaborn>=0.13.2",
]
